@@ -23,3 +23,4 @@ Version 0.5.0
 Version 0.5.1
 
 * Packaging lands as a script
+* Supporting protocol buffer serialization
